@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Apache-SizeLimit
-version:            0.92
+version:            0.93
 abstract:           Because size does matter.
 author:  []
 license:            unknown
